Review code, set java target to 21, enabled virtual thread